app/globals.css
/* ... */
.hero .hero-image-mobile {
    display: none;
}

.hero .hero-image-desktop img,
.hero .hero-image-mobile img {
    height: calc(100dvh - 130px);
    width: auto;
    left: 50%;
    transform: translate3d(-50%, -150%, 0);
    position: absolute;  
    opacity: 0;
    top: 50%;
    will-change: transform, opacity;
}

.hero .hero-image-mobile img {
    transform: translate3d(-50%, -150%, 0);
}

.hero .hero-image-desktop .image-d {
    animation: fallTopDesktop 1s ease-out forwards;
}

.hero .hero-image-desktop .image-i {
    animation: fallTopDesktop 1.1s ease-out forwards;
}

.hero .hero-image-desktop .image-c {
    animation: fallTopDesktop 1.24s ease-out forwards;
}

.hero .hero-image-desktop .image-k {
    animation: fallTopDesktop 1.32s ease-out forwards;
}

.hero .hero-image-desktop .image-y {
    animation: fallTopDesktop 1.4s ease-out forwards;
}

.hero .hero-image-desktop .image-d {
    animation: fallTopDesktop 1.5s ease-out forwards;
}

.hero .hero-image-desktop .image-d2 {
    animation: fallTopDesktop 1s ease-out forwards;
}

.hero .hero-image-desktop .image-n {
    animation: fallTopDesktop 1.3s ease-out forwards;
}

.hero .hero-image-desktop .image-s {
    animation: fallTopDesktop 1.2s ease-out forwards;
}

.hero .hero-image-desktop .image-icon {
    animation: fallTopDesktop 1.6s ease-out forwards;
}

@keyframes fallTopDesktop {
  0% {
    opacity: 0;
    transform: translate3d(-50%, -150%, 0);
  }
  80% {
    opacity: 1;
    transform: translate3d(-50%, -47%, 0);
  }
  100% {
    opacity: 1;
    transform: translate3d(-50%, -50%, 0);
  }
}

.hero .hero-image-mobile.is-ready .image-d {
    animation: fallTopMobile 1.2s ease-out forwards;
}

.hero .hero-image-mobile.is-ready .image-i {
    animation: fallTopMobile 1.29s ease-out forwards;
}

.hero .hero-image-mobile.is-ready .image-c {
    animation: fallTopMobile 1.32s ease-out forwards;
}

.hero .hero-image-mobile.is-ready .image-k {
    animation: fallTopMobile 1.39s ease-out forwards;
}

.hero .hero-image-mobile.is-ready .image-y {
    animation: fallTopMobile 1.5s ease-out forwards;
}

.hero .hero-image-mobile.is-ready .image-d {
    animation: fallTopMobile 1.54s ease-out forwards;
}

.hero .hero-image-mobile.is-ready .image-d2 {
    animation: fallTopMobile 1.5s ease-out forwards;
}

.hero .hero-image-mobile.is-ready .image-n {
    animation: fallTopMobile 1.34s ease-out forwards;
}

.hero .hero-image-mobile.is-ready .image-s {
    animation: fallTopMobile 1.25s ease-out forwards;
}

.hero .hero-image-mobile.is-ready .image-icon {
    animation: fallTopMobile 1.6s ease-out forwards;
}

@keyframes fallTopMobile {
  0% {
    opacity: 0;
    transform: translate3d(-50%, -150%, 0);
  }
  80% {
    opacity: 1;
    transform: translate3d(-50%, -47%, 0);
  }
  100% {
    opacity: 1;
    transform: translate3d(-50%, -55%, 0);
  }
}

@keyframes fallTopDesktop {
  0% {
    opacity: 0;
    transform: translate3d(-50%, -150%, 0);
  }
  80% {
    opacity: 1;
    transform: translate3d(-50%, -47%, 0);
  }
  100% {
    opacity: 1;
    transform: translate3d(-50%, -50%, 0);
  }
}

@keyframes topBottom {
    0%   { transform: translateY(0); }
    25%  { transform: translateY(-15px); }
    50%  { transform: translateY(0); }
    75%  { transform: translateY(15px); }
    100% { transform: translateY(0); }
}

.hero-divider{
    height: 50px;
}
/* end hero */

/* section 1 */
.pay-to-play{
    width: 100%;
    max-width: 400px;
    margin-left: auto;
    margin-right: auto;
    position: relative;
    height: 150px;
    overflow: hidden            ;
}
.coin {
    z-index: 2;
    width: 72px;
    position: absolute;
    top: 16px;
    left: 0px;
    transition: left 0.1s linear, transform 0.1s linear;
}
.slot-one {
    z-index: 1;
    width: 280px;
    position: absolute;
    top: 0;
    left: 48%;
}
.slot-two {
    z-index: 3;
    width: 280px;
    position: absolute;
    top: 0;
    left: 48%;
}
/* End section 1 */

/* About */
.about-heading{
    padding-top: 20px;
    padding-left: 0;
    text-align: center;
}
.about-heading img{
    width: 100%;
    max-width: 300px;
}
.about-section{
    padding: 20px;
    width: 100%;
}

.paragraph-about {
  transition: opacity 1s ease-in-out;
}

.text-about,.text-about a {
  display: inline-block;
  opacity: 0.2;
  transform: translateY(10px);
  transition: opacity 0.2s ease, transform 0.3s ease;
  margin-right: 6px;
  margin-bottom: 8px;
  font-weight: 400;
  font-size: 18px;
  line-height: 1.6;
  margin-bottom: 5px;
}

a.text-about{
  color: #000;
  text-decoration: none;
  font-weight: 700;
}


a.text-about svg{
  height: .87em;
}

.text-about.dimmed {
    opacity: 0.2;
}
.experience-section{
   padding: 20px;
   margin-bottom: 80px;
}
.experience-heading{
    font-weight: 700;
    font-size: 18px;
}
.experience-heading img{
    height: 51;
    width: auto;
    max-width: 550px;
}
.experience-subheading{
    font-size: 18px;
    margin-bottom: 25px;
}
.experience-boxes{
    display: flex;
    gap: 30px;
}
.experience-box{
    min-width: 360px;
    border: 2px solid black;
    border-radius: 5px;
    outline-offset: -2px;
    cursor: url(/images/eye.png) 20 20, pointer !important;
    height: fit-content;
}
.experience-box:hover{
    outline: black solid 4px;
    outline-offset: -5px;
    border-radius: 5px;
}
.principle-section{
   padding: 20px;
   margin-bottom: 80px;
}
.principle-heading{
    font-weight: 700;
    font-size: 18px;
    margin-bottom: 35px;
}
.principle-heading img{
    height: 118px;
    width: auto;
    max-width: 550px;
}
.principle-subheading{
    font-size: 18px;
    margin-bottom: 25px;
}
.principle-boxes{
    display: flex;
    gap: 30px;
}
.principle-box{
    padding: 17px;
    min-width: 360px;
    border: 2px solid black;
    border-radius: 6px;
    outline-offset: -2px;
    cursor: url(/images/eye.png) 20 20, pointer !important;
    height: fit-content;
}
.principle-box:hover{
    outline: black solid 4px;
    outline-offset: -5px;
    border-radius: 5px;
}
/* ... */

